--- a/EdgeDetectionApp/Views/UserControls/DetectionMethodView.xaml
+++ b/EdgeDetectionApp/Views/UserControls/DetectionMethodView.xaml
@@ -5,39 +5,16 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:EdgeDetectionApp.Views.UserControls"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
+             DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=OptionsViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="350" d:DesignWidth="300">
+    <UserControl.Resources>
+        <sys:Double x:Key="{x:Static SystemParameters.VerticalScrollBarWidthKey}">10</sys:Double>
+    </UserControl.Resources>
     <GroupBox Header="Edge Detection Method" Foreground="{StaticResource textColor}">
-        <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
-            <ScrollViewer.Resources>
-                <sys:Double x:Key="{x:Static SystemParameters.VerticalScrollBarWidthKey}">10</sys:Double>
-            </ScrollViewer.Resources>
-            <ListBox Background="Transparent" SelectedIndex="0"
-                             ItemsSource="{Binding EdgeDetectors}" SelectedItem="{Binding SelectedEdgeDetector, Mode=TwoWay}" BorderBrush="Transparent">
-                <ListBox.ItemContainerStyle>
-                    <Style TargetType="ListBoxItem">
-                        <Setter Property="IsSelected" Value="{Binding Content.IsSelected, Mode=TwoWay, RelativeSource={RelativeSource Self}}"/>
-                        <Setter Property="Template">
-                            <Setter.Value>
-                                <ControlTemplate TargetType="ListBoxItem">
-                                    <ContentPresenter Margin="5"/>
-                                </ControlTemplate>
-                            </Setter.Value>
-                        </Setter>
-                    </Style>
-                </ListBox.ItemContainerStyle>
-                <ListBox.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <StackPanel IsItemsHost="True"/>
-                    </ItemsPanelTemplate>
-                </ListBox.ItemsPanel>
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <RadioButton GroupName="raid" Foreground="{StaticResource textColor}"
-                                     Content="{Binding Name}" IsChecked="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListBoxItem}}, Path=IsSelected}" />
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
-        </ScrollViewer>
+        <ListBox ItemsSource="{Binding EdgeDetectors}" SelectedItem="{Binding SelectedEdgeDetector}"
+                 Style="{StaticResource RadioButtonList}" IsEnabled="True" SelectedValue="0"
+                 ScrollViewer.VerticalScrollBarVisibility="Auto">
+        </ListBox>
     </GroupBox>
 </UserControl>
