--- a/EdgeDetectionApp/Views/UserControls/DetectionOptionsView.xaml
+++ b/EdgeDetectionApp/Views/UserControls/DetectionOptionsView.xaml
@@ -6,6 +6,7 @@
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              xmlns:local="clr-namespace:EdgeDetectionApp.Views.UserControls"
+             DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=OptionsViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <GroupBox Header="Detection Options" Foreground="{StaticResource textColor}">
